--- a/www/pages/Main/pageTemplates/Main.html
+++ b/www/pages/Main/pageTemplates/Main.html
@@ -1,2 +1,3 @@
 <h1>Eleoquent Javascript Excercises</h1>
 <simply-render rel="looping_a_triangle"></simply-render>
+<simply-render rel="fizzbuzz"></simply-render>
